--- a/Project3/index.html
+++ b/Project3/index.html
@@ -21,12 +21,12 @@
             <h2 id="author">Frisk</h2>
             <p id="position">main character</p>
             <p id="info">
-                I fell down ebot mountain and i want to go back home again
+                I fell down in ebot mountain and i want to go back home again
             </p>
             <div class="button-container">
-                <button class="prev-btn">Previous</button>
-                <button class="next-btn">Next</button>
-                <button class="random-btn">Random</button>
+                <button class="prevBtn">Previous</button>
+                <button class="nextBtn">Next</button>
+                <button class="randomBtn">Random</button>
             </div>
         </article>
     </section>
